<resources>
    <string name="app_name">LightApp</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="lgt_on">Light On</string>
    <string name="lgt_off">Light Off</string>
    <string name="sensing_on">Motion Sensor On</string>
    <string name="sensing_off">Motion Sensor Off</string>
    <string name="blinking_on">Blinking On</string>
    <string name="blinking_off">Blinking Off</string>
    <string name="slider_text">Brightness:</string>
</resources>