<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/beige">

    <RadioGroup
        android:checkedButton="@+id/lgt_off"
        android:id="@+id/light_toggle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/out_line"
        android:orientation="horizontal">

        <RadioButton
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/lgt_off"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/lgt_off"
            android:textColor="@color/white" />

        <RadioButton
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:id="@+id/lgt_on"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/lgt_on"
            android:textColor="@color/white" />

    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slider_text"
        android:textColor="@color/black"
        android:layout_marginStart="11dp"
        android:textSize="20sp"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1.0"
        android:valueTo="5"
        android:stepSize="1.0"
        android:value="3.0"
        app:thumbColor="@color/red"
        app:trackColor="@color/light_red"
        app:haloColor="@color/light_red"
        />

    <RadioGroup
        android:checkedButton="@+id/sensing_off"
        android:id="@+id/sensing_toggle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/out_line"
        android:orientation="horizontal">



        <RadioButton
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/sensing_off"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sensing_off"
            android:textColor="@color/white" />

        <RadioButton
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:id="@+id/sensing_on"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sensing_on"
            android:textColor="@color/white" />

    </RadioGroup>

<!--    <RadioGroup-->
<!--        android:checkedButton="@+id/blinking_off"-->
<!--        android:id="@+id/blinking_toggle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:layout_marginLeft="50dp"-->
<!--        android:layout_marginRight="50dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:background="@drawable/out_line"-->
<!--        android:orientation="horizontal">-->

<!--        <RadioButton-->
<!--            android:layout_marginEnd="1dp"-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:layout_marginBottom="1dp"-->
<!--            android:id="@+id/blinking_off"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@drawable/toggle_widget_background"-->
<!--            android:button="@null"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/blinking_off"-->
<!--            android:textColor="@color/white" />-->


<!--        <RadioButton-->
<!--            android:layout_marginTop="1dp"-->
<!--            android:layout_marginStart="1dp"-->
<!--            android:layout_marginEnd="1dp"-->
<!--            android:id="@+id/blinking_on"-->
<!--            android:background="@drawable/toggle_widget_background"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:button="@null"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/blinking_on"-->

<!--            android:textColor="@color/white" />-->
<!--    </RadioGroup>-->

<!--    blinking frequency slider here-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/circle_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
